--- a/api2/Procfile
+++ b/api2/Procfile
@@ -1,1 +1,1 @@
-app: hypercorn main --reload --debug --bind books.local.gd:$PORT --access-logfile - --error-logfile - --log-level DEBUG
+api: hypercorn main --reload --debug --bind wordle.local.gd:$PORT --access-logfile - --error-logfile - --log-level DEBUG
